# coherence_analysis_histroy

./: .gitignore  .pre-commit-config.yaml  7_5noise.ipynb  BradyHotspring.slurm  CPD.ipynb  CWP_meeting.ipynb  Coherence.ipynb  Coherence_BH_2.ipynb  Coherence_BH_event_detection.ipynb  Coherence_analysis.py  Eigenvalue_decomp_estimates.ipynb  Frequency continuity.ipynb  README.md  __init__.py  analyses_of_qr_estimates.ipynb  analyses_of_qr_estimates2.ipynb  coherence_test.py  dascore_issue.py  event_frequency_effects.ipynb  functions.py  hello.py  large_scale_test.slurm  large_scale_tests copy.py  large_scale_tests.py  large_scale_tests_parser.py  makefile  marmousi_deepwave.ipynb  model_data_coherence_deepwave.ipynb  plot_outputs.ipynb  pyproject.toml  requirements.txt  requirements_basic.txt  requirements_notebooks.txt  sample_bad_code.py  single_file_coherence.py  test.py  test_coherence.py  tests.py
Coherence_and_estimation_notebooks/: 2. coherence_example_with_Bradys_Hot_Spring_data.ipynb  4. show_estimations_with_Bradys_Hot_Springs_data.ipynb  5. the_why_of_qr_estimates.ipynb  Coherence_BH_event_detection.ipynb  analyses_of_qr_estimates.ipynb  analyses_of_qr_estimates2.ipynb  covariance_v_coherence.ipynb
Other_notebooks/: Paper_figures.ipynb  explore_port_angeles_data.ipynb
coherence_analysis/: __init__.py  coherence_analysis.py  core.py  large_scale_tests.py  large_scale_tests_dc.py  large_scale_tests_typer.py  plot_raw_data.py  plot_specific_data_and_coherence.py  single_file_coherence.py  synthetic_visualizations.py  utils.py  wo_dascore_large_scale_tests.py
(+57 files in other folders)
