[project]
name = "coherence_analyses"
version = "0.1.0"
description = "Research code on coherence analyses for DAS data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dascore>=0.1.3",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openpyxl>=3.1.5",
]
modeling = [
    "deepwave>=0.0.20",
]

[tool.uv]
dev-dependencies = [
    "pytest-codspeed>=3.1.0",
    "pytest>=8.3.4",
    "ruff>=0.6.8",
]

[tool.ruff]
line-length = 79
builtins = ["_"]

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Numpy convention via `convention = "numpy"`, below.
select = ["D", "N", "I", "E", "F"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
